--- a/index.html
+++ b/index.html
@@ -6,26 +6,13 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-	<form>
-		<input id="search" type="text">
-		<p>or ⌘ + L</p>
+	<form class="search" action="https://duckduckgo.com/">
+		<input id="qfield" type="text" name="q" onkeydown="if (event.keyCode == 13) { this.form.submit(); }">
+		<span class="shortkey">or ⌘ + L</span>
 	</form>
-	<ul class="favorites">
-		<li><a href="https://web.whatsapp.com">Whats App</a></li>
-		<li><a href="https://www.readability.com/reading-list">Readability</a></li>
-		<li><a href="http://flojoto.synology.me:8081/home/">Sick Beard</a></li>
-		<li><a href="http://flojoto.synology.me:6789">NZB Get</a></li>
-		<li><a href="https://dognzb.cr/main.cfm">DOGnzb</a></li>
-		<li><a href="http://127.0.0.1:32400/web/index.html#!/dashboard">Plex</a></li>
-		<li><a href="http://10.0.1.5:5050">CouchPotato</a></li>
-		<li><a href="https://10.0.1.5:5001/webman/index.cgi">NAS</a></li>
+	<ul class="favorites" id="flist">
 	</ul>
 </body>
-<script type="text/javascript">
-window.onload = function(){
-  var text_input = document.getElementById ('search');
-  text_input.focus ();
-  text_input.select ();
-}
-</script>
+<script type="text/javascript" src="SITES.json"></script>
+<script type="text/javascript" src="index.js"></script>
 </html>
