--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<span class="shortkey">or ⌘ + L</span>
 	</form>
 	<ul class="favorites" id="flist">
+		<!-- populated via javascript -->
 	</ul>
 </body>
 <script type="text/javascript" src="SITES.json"></script>
